# proofbundle

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONFORMANCE.md  CONTRIBUTING.md  CROSS_IMPLEMENTATION_REPORT.md  EVAL_CLAIM.md  GOVERNANCE.md  INTEGRATIONS.md  INTEROP.md  LICENSE  MAINTAINERS.md  MANIFEST.in  MIGRATION_3.1.0_TO_3.1.1.md  Makefile  OUTREACH_issue_inspect_evals.md  OUTREACH_pr_every_eval_ever.md  PREDICATE.md  README.md  RELEASE.md  REVIEW.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  TRADEMARK.md  funding.json  oss_maintainer_roles.json  paper.bib  paper.md  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  external_review.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  demo-reproducible.yml  fork-pr-isolation.yml  published-artifact-gate.yml  release-integrity.yml  release.yml  reusable-build-attest.yml  scorecard.yml
action/: action.yml
audit_artifacts/: 565_pr_body_draft.md  cross_lens_reviews.md  crossimpl_fixture_gap_20260711.md  findings_register_361.json  live_state_20260711.md  phase_a_ergebnis.md  release_notes_draft.md  rust_relation_differential_matrix.json  test_report.md  thread_565_snapshot.md  w2_conformance_review_20260711.md  worklog.md
audit_artifacts/360/: fuzz_soak_latest.json  pre_tag_adversarial_audit_360.md  rust_differential_matrix.json
audit_artifacts/370/: pre_tag_adversarial_audit_370.md
conformance/: README.md  common_vocabulary.py  cross_format.py  manifest.json  run_conformance.py  vector_schema.json
conformance/relation/: generate_vectors.py
dist_final/: proofbundle-3.6.1-py3-none-any.whl
docs/: ANCHORS.md  ANCHORS_MARKOVIAN.md  AUDIT_READINESS.md  AUDIT_SCOPE.md  COMMERCIAL_BOUNDARY.md  DEMO.md  EXPERIMENTAL_ENCLAVE.md  FAQ.md  GLOSSARY.md  GRANT_MILESTONES.md  INSPECT_HAPPY_PATH.md  IN_TOTO_PROFILE.md  MIGRATION_EVAL_PREDICATE.md  NON_CLAIMS.md  OPERATIONS_SECURITY.md  POLICY_PROFILES.md  PRE_TAG_AUDIT.md  PRIORITY_RECORD.md  PROJECT_BRIEF.md  PUBLIC_TRANSPARENCY_PROFILE.md  RELATED_WORK.md  REVIEWERS.md  SDJWT_VC_PROFILE.md  SD_JWT_VC_PROFILE.md  SUBJECT_BINDING.md  TESTING_STRATEGY.md  TRUST_ANCHORS.md  essay_the_unverifiable_eval.md  in_toto_predicate_proposal.md  outreach_note.md  profile_README.md
docs/adr/: 0001-decision-receipt-separate-predicate.md  0002-universal-content-root.md  0003-hybrid-payload-signatures.md  0004-native-root-authenticity.md  0005-eval-semantics-score-vs-threshold.md  0006-anchor-longevity.md  0007-crypto-agility-alg-dispatch.md  BASELINE_ANCHOR.md  renewal_policy.example.json
docs/archive/: REVIEW_v1.6.md
docs/audit/: AUDIT_SCOPE.md  BASELINE_3_1_2.md  BASELINE_3_1_3.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_3_1_3.md  MIGRATION_3_1_3_TO_3_2.md  SECURITY_FINDINGS_CLOSED.md  THREAT_MODEL_DELTA.md  WEBSITE_SSOT_REPORT.md
docs/design/: RELATION_V01_DESIGN.md
docs/predicates/: README.md  action-outcome.md  decision-receipt.md  relation.md  run-ledger.md  trust-pack.md  verification-summary.md
docs/readiness_pack/: AUDITOR_OPEN_POINTS.md  MANIFEST.sha256  OPEN_QUESTIONS.md  PROGRESS.md  README.md  REPRODUCTION_RUNBOOK.md  calendar_independence.md  differential_matrix.md  index.json  rust_parity_scope.md  tamper_resistance.md  threat_model_delta_360.md
docs/reviews/: decision-receipt-v0.1-review.md  (+1 more)
examples/: README.md  checkpoint_example.py  decision_receipt_allow.json  decision_receipt_deny.json  decision_receipt_escalate.json  decision_receipt_with_eval_ref.intoto.json  eee_receipt.py  example.tlog-proof  example_bundle.json  experimental_enclave.py  inspect_hook_example.py  inspect_receipt.py  intoto_dsse_export.py  lm_eval_receipt.py  make_example.py  persample_audit.py  pytest_plugin_example.py  rekor_interop.py  tlog_proof_example.py  trust_policy_decision_strict.json  trust_policy_strict.json
formal/: README.md  model.py
fuzz/: fuzz_verifiers.py
schemas/: action-outcome-v0.1.schema.json  decision-receipt-v0.1.schema.json  eval_claim_v0_1.schema.json  in_toto_statement_v1.schema.json  proofbundle_v0_1.schema.json  run-ledger-v0.1.schema.json  trust-pack-v0.1.schema.json  trust_policy_v0_1.schema.json  verification-summary-v0.1.schema.json
scripts/: _build_anchor_fixture.py  audit_candidate_matrix.py  branch_base_check.py  build_reproducible.py  check_version_and_changelog.py  claims_hygiene_check.py  demo.sh  demo_tamper.sh  doc_link_check.py  findings_register.py  fork_pr_secret_isolation.py  fuzz_soak.py  gen_findings_register.py  gen_synthetic_ots_fixture.py  install_git_hooks.sh  mutant_signature_guard.py  mutation_check.py  pre_tag_audit_gate.py  readiness_pack_gate.py  readiness_pack_manifest.py  render_demo.py  rust_parity_gate.py  rust_parity_registry.json  test_manifest_gate.py  type_confusion_gate.py
tests/: conftest.py  test_adapters.py  test_adversarial.py  test_anchor_hardening_321.py  test_anchor_longevity_property.py  test_anchor_target_trustedtime.py  test_anchors_chia.py  test_anchors_chia_add.py  test_anchors_chia_claims.py  test_anchors_generic.py  test_anchors_markovian.py  test_anchors_ots.py  test_anchors_rfc3161.py  test_anchors_rootcommit.py  test_assurance.py  test_audit_candidate_360.py  test_automation_verdict.py  test_beacon.py  test_branch_base_check.py  test_budget.py  test_bughunt_361_automation_failopen.py  test_bughunt_361_never_raise.py  test_bundle.py  test_bundle_robustness.py  test_canonical.py  test_checkpoint.py  test_checkpoint_external_vectors.py  test_checkpoint_quorum_property.py  test_claims_hygiene.py  test_cli.py  test_cli_eval.py  test_cli_require_anchor.py  test_conformance.py  test_conformance_retention_361.py  test_content_root_property.py  test_cosignature.py  test_cosignature_mldsa.py  test_cross_format_singleton_361.py  test_decision_anchors.py  test_decision_cli.py  (+116 more)
tools/pb_verify_rs/: Cargo.toml  crosscheck.py  rust-toolchain.toml
tools/pb_verify_rs/src/: main.rs
(+323 files in other folders)
