[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofbundle"
version = "1.3.0"
description = "Emit and verify portable cryptographic evidence bundles, offline: Ed25519 + RFC 6962 Merkle + optional SD-JWT."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Konrad Gruszka" }]
keywords = [
    "cryptography",
    "merkle",
    "transparency-log",
    "ed25519",
    "sd-jwt",
    "verifiable-credentials",
    "attestation",
    "provenance",
    "rfc6962",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
# SD-JWT support is an optional capability. It adds NO runtime dependency beyond the core
# `cryptography` (EdDSA + stdlib), so `pip install proofbundle[sdjwt]` keeps the trusted core
# lean; the extra documents intent and is forward-compatible if SD-JWT ever needs a heavier lib.
sdjwt = []
# EMITTING eval receipts needs a real RFC 8785 JCS canonicalizer (emit path only). The VERIFY
# path (verify_bundle / decode_eval_claim) never canonicalizes — it checks stored bytes — so the
# verifier stays dependency-free. `pip install proofbundle[eval]` adds emit-side canonicalization.
eval = ["rfc8785>=0.1.4"]
# The lm-eval adapter reads exported results.json (no import) → pure stdlib.
adapters = []
# ML-DSA-44 (FIPS 204) cosignature verification (C2SP tlog-cosignature type 0x06). Needs a
# cryptography build with OpenSSL 3.5+ (default PyPI wheels since 48.0.0). Verify-only by default;
# the emit helper needs the same. Ed25519 paths never require this.
pq = ["cryptography>=48"]
# The pytest plugin (opt-in test-run receipt via the pytest11 entry-point) — pytest is an optional extra,
# never a core dependency. Floor 7.0: the hooks/stats API is signature-stable across pytest 7/8/9.
pytest = ["pytest>=7"]
# The inspect_ai adapter uses the STABLE read_eval_log API (lazy import). Pinned with an UPPER bound:
# the .eval format + pydantic schema change between versions (inspect_ai issue 834), and the fixture
# test is bound to this range. inspect_ai requires Python >= 3.10, so the marker gates it out on 3.9
# (base + [eval]/[sdjwt] still work on 3.9; the inspect adapter test skips there). Fixes the red 3.9 CI.
inspect = ['inspect_ai>=0.3.112,<0.4; python_version >= "3.10"']
dev = ["pytest>=7", "ruff>=0.5", "jsonschema>=4", "mypy>=1.8", "build>=1", "hypothesis>=6",
       "rfc8785>=0.1.4", "sd-jwt>=0.10", 'inspect_ai>=0.3.112,<0.4; python_version >= "3.10"']

[project.urls]
Homepage = "https://b7n0de.com"
Repository = "https://github.com/b7n0de/proofbundle"
Issues = "https://github.com/b7n0de/proofbundle/issues"
Changelog = "https://github.com/b7n0de/proofbundle/blob/main/CHANGELOG.md"
Documentation = "https://github.com/b7n0de/proofbundle#readme"

[project.scripts]
proofbundle = "proofbundle.cli:main"

# Framework integrations (opt-in auto-emit; gated on PROOFBUNDLE_EMIT / a flag, never silent).
[project.entry-points.inspect_ai]
proofbundle = "proofbundle._inspect_registry"
[project.entry-points.pytest11]
proofbundle = "proofbundle.pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proofbundle = ["py.typed", "eee_eval_schema.json"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
