[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofbundle"
version = "3.2.2"
description = "Emit and verify portable cryptographic evidence bundles, offline: Ed25519 + RFC 6962 Merkle + optional SD-JWT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Konrad Gruszka" }]
keywords = [
    "cryptography",
    "merkle",
    "transparency-log",
    "ed25519",
    "sd-jwt",
    "verifiable-credentials",
    "attestation",
    "provenance",
    "rfc6962",
]
classifiers = [
    # Stays Beta until the funded external security review passes (Owner decision E1, 2026-07-12):
    # "stable is evidenced, not asserted". The move to "5 - Production/Stable" is a separate,
    # audit-gated milestone (see docs/GRANT_MILESTONES.md), never claimed pre-audit.
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
# SD-JWT support is an optional capability. It adds NO runtime dependency beyond the core
# `cryptography` (EdDSA + stdlib), so `pip install proofbundle[sdjwt]` keeps the trusted core
# lean; the extra documents intent and is forward-compatible if SD-JWT ever needs a heavier lib.
sdjwt = []
# EMITTING eval receipts needs a real RFC 8785 JCS canonicalizer (emit path only). The VERIFY
# path (verify_bundle / decode_eval_claim) never canonicalizes — it checks stored bytes — so the
# verifier stays dependency-free. `pip install proofbundle[eval]` adds emit-side canonicalization.
eval = ["rfc8785>=0.1.4"]
# EXPERIMENTAL: external time anchors (proofbundle.anchors) — RFC 3161 TSA + OpenTimestamps. Opt-in and
# clearly experimental (API/format may change). rfc3161-client (Trail of Bits) is deliberately offline —
# it verifies an RFC 3161 token against bundled roots, no network in the verify path. opentimestamps is
# the OTS proof library. rfc8785 gives the receipt its canonical (JCS) root. The base install stays
# anchor-free (only cryptography); a receipt with no anchors verifies unchanged.
anchors = ["rfc3161-client>=1.0.6", "opentimestamps>=0.4.5", "rfc8785>=0.1.4"]
# The lm-eval adapter reads exported results.json (no import) → pure stdlib.
adapters = []
# chia-datalayer/v1 anchor WRITER (anchors_chia_add). Needs no extra Python package — it drives the
# stable `chia rpc data_layer|full_node` CLI of a locally installed, cert-authed Chia node (the DataLayer
# node is the real dependency, not a wheel). Declared so `pip install proofbundle[chia]` is a documented,
# discoverable install target. VERIFYING an anchor offline (anchors_chia) needs neither this nor a node.
chia = []
# EXPERIMENTAL (v2.0 preview): the TEE-attestation bridge (proofbundle.experimental.enclave).
# Opt-in and clearly unstable — API/wire-format may change or be removed without deprecation.
# No new runtime dependency (pure stdlib + the core `cryptography`); the extra exists to signal
# intent and gate the preview, mirroring the `sdjwt` extra. `pip install "proofbundle[experimental]"`.
experimental = []
# ML-DSA-44 (FIPS 204) cosignature verification (C2SP tlog-cosignature type 0x06). Needs a
# cryptography build with OpenSSL 3.5+ (default PyPI wheels since 48.0.0). Verify-only by default;
# the emit helper needs the same. Ed25519 paths never require this.
pq = ["cryptography>=48"]
# The pytest plugin (opt-in test-run receipt via the pytest11 entry-point) — pytest is an optional extra,
# never a core dependency. Floor 7.0: the hooks/stats API is signature-stable across pytest 7/8/9.
pytest = ["pytest>=7"]
# The inspect_ai adapter uses the STABLE read_eval_log API (lazy import). Pinned with an UPPER bound:
# the .eval format + pydantic schema change between versions (inspect_ai issue 834), and the fixture
# test is bound to this range. Since v1.4.0 the project floor is Python 3.10, so no per-extra version
# marker is needed here (inspect_ai's own >=3.10 requirement is always satisfiable on a supported base).
inspect = ['inspect_ai>=0.3.112,<0.4']
dev = ["pytest>=7", "ruff>=0.5", "jsonschema>=4", "mypy>=1.8", "build>=1", "hypothesis>=6",
       "rfc8785>=0.1.4", "sd-jwt>=0.10", 'inspect_ai>=0.3.112,<0.4']

[project.urls]
Homepage = "https://b7n0de.com"
Repository = "https://github.com/b7n0de/proofbundle"
Issues = "https://github.com/b7n0de/proofbundle/issues"
Changelog = "https://github.com/b7n0de/proofbundle/blob/main/CHANGELOG.md"
Documentation = "https://github.com/b7n0de/proofbundle#readme"

[project.scripts]
proofbundle = "proofbundle.cli:main"

# Framework integrations (opt-in auto-emit; gated on PROOFBUNDLE_EMIT / a flag, never silent).
[project.entry-points.inspect_ai]
proofbundle = "proofbundle._inspect_registry"
[project.entry-points.pytest11]
proofbundle = "proofbundle.pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proofbundle = ["py.typed", "eee_eval_schema.json", "policies/*.json"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
