[package]
name = "pb_verify_rs"
version = "0.1.0"
edition = "2021"
description = "Independent read-only proofbundle cross-implementation verifier (3.2.0 O8). Shares NO canonicalization or parser code with the Python implementation."
license = "Apache-2.0"

[[bin]]
name = "pb_verify_rs"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_jcs = "0.1"
base64 = "0.22"
hex = "0.4"

[profile.release]
opt-level = 2
